# app/lib/api/openapi.json
@@ -1026,14 +1026,7 @@
       "get": {
         "tags": ["charachip-controller"],
         "operationId": "charas",
-        "parameters": [
-          {
-            "name": "form",
-            "in": "query",
-            "required": true,
-            "schema": { "$ref": "#/components/schemas/CharachipsForm" }
-          }
-        ],
+        "parameters": [{ "name": "form", "in": "query", "required": true }],
         "responses": {
           "200": {
             "description": "OK",
@@ -1048,14 +1041,7 @@
       "get": {
         "tags": ["charachip-controller"],
         "operationId": "charachips",
-        "parameters": [
-          {
-            "name": "form",
-            "in": "query",
-            "required": true,
-            "schema": { "$ref": "#/components/schemas/CharachipsForm" }
-          }
-        ],
+        "parameters": [{ "name": "form", "in": "query", "required": true }],
         "responses": {
           "200": {
             "description": "OK",
@@ -1471,8 +1457,8 @@
         "properties": {
           "code": { "type": "string" },
           "name": { "type": "string" },
-          "is_owl_viewable_type": { "type": "boolean" },
-          "is_say_type": { "type": "boolean" }
+          "is_say_type": { "type": "boolean" },
+          "is_owl_viewable_type": { "type": "boolean" }
         }
       },
       "MessageView": {
@@ -1549,13 +1535,13 @@
           },
           "count_camp": { "$ref": "#/components/schemas/Camp" },
           "description": { "type": "string" },
-          "is_viewable_lovers_message": { "type": "boolean" },
           "abilities": { "$ref": "#/components/schemas/AbilityTypes" },
           "is_fox_count": { "type": "boolean" },
-          "is_viewable_sympathize_say": { "type": "boolean" },
           "is_viewable_werewolf_say": { "type": "boolean" },
           "is_available_werewolf_say": { "type": "boolean" },
-          "is_available_sympathize_say": { "type": "boolean" }
+          "is_viewable_lovers_message": { "type": "boolean" },
+          "is_available_sympathize_say": { "type": "boolean" },
+          "is_viewable_sympathize_say": { "type": "boolean" }
         }
       },
       "SkillRequest": {
@@ -1975,12 +1961,12 @@
         "properties": {
           "code": { "type": "string" },
           "name": { "type": "string" },
-          "is_canceled": { "type": "boolean" },
           "is_prologue": { "type": "boolean" },
           "is_progress": { "type": "boolean" },
           "is_epilogue": { "type": "boolean" },
           "is_solved": { "type": "boolean" },
-          "is_finished": { "type": "boolean" }
+          "is_finished": { "type": "boolean" },
+          "is_canceled": { "type": "boolean" }
         }
       },
       "VillageTags": {
@@ -2482,35 +2468,35 @@
           "notification": {
             "$ref": "#/components/schemas/VillageParticipantNotificationCondition"
           },
-          "is_available_skill_request": { "type": "boolean" },
+          "is_alive": { "type": "boolean" },
           "is_dead": { "type": "boolean" },
-          "is_available_coming_out": { "type": "boolean" },
-          "is_viewable_monologue_say": { "type": "boolean" },
-          "is_sayable_monologue_say": { "type": "boolean" },
           "is_admin": { "type": "boolean" },
+          "is_available_coming_out": { "type": "boolean" },
           "is_viewable_grave_say": { "type": "boolean" },
           "is_sayable_grave_say": { "type": "boolean" },
           "is_viewable_lovers_say": { "type": "boolean" },
           "is_sayable_lovers_say": { "type": "boolean" },
+          "is_viewable_monologue_say": { "type": "boolean" },
+          "is_sayable_monologue_say": { "type": "boolean" },
+          "is_viewable_secret_say": { "type": "boolean" },
+          "is_sayable_secret_say": { "type": "boolean" },
           "is_viewable_spectate_say": { "type": "boolean" },
           "is_sayable_spectate_say": { "type": "boolean" },
-          "is_viewable_sympathize_say": { "type": "boolean" },
           "is_sayable_sympathize_say": { "type": "boolean" },
           "is_viewable_werewolf_say": { "type": "boolean" },
           "is_sayable_werewolf_say": { "type": "boolean" },
+          "is_viewable_fox_message": { "type": "boolean" },
+          "is_viewable_mason_message": { "type": "boolean" },
+          "is_available_vote": { "type": "boolean" },
+          "is_available_skill_request": { "type": "boolean" },
+          "is_viewable_sympathize_say": { "type": "boolean" },
           "is_viewable_attack_message": { "type": "boolean" },
-          "is_viewable_secret_say": { "type": "boolean" },
-          "is_sayable_secret_say": { "type": "boolean" },
           "is_viewable_autopsy_message": { "type": "boolean" },
           "is_viewable_fanatic_message": { "type": "boolean" },
-          "is_viewable_fox_message": { "type": "boolean" },
           "is_viewable_guru_psychic_message": { "type": "boolean" },
-          "is_viewable_mason_message": { "type": "boolean" },
           "is_viewable_private_system_message": { "type": "boolean" },
           "is_viewable_psychic_message": { "type": "boolean" },
-          "is_viewable_sympathizer_message": { "type": "boolean" },
-          "is_available_vote": { "type": "boolean" },
-          "is_alive": { "type": "boolean" }
+          "is_viewable_sympathizer_message": { "type": "boolean" }
         }
       },
       "VillageParticipants": {
@@ -2787,15 +2773,6 @@
           },
           "create_finished_villages": {
             "$ref": "#/components/schemas/VillagesView"
-          }
-        }
-      },
-      "CharachipsForm": {
-        "type": "object",
-        "properties": {
-          "charachip_ids": {
-            "type": "array",
-            "items": { "type": "integer", "format": "int32" }
           }
         }
       },
