# app/lib/api/schema.ts
@@ -1006,8 +1006,8 @@ export interface components {
     MessageType: {
       code: string
       name: string
-      is_owl_viewable_type: boolean
       is_say_type: boolean
+      is_owl_viewable_type: boolean
     }
     MessageView: {
       from?: components['schemas']['VillageParticipantView']
@@ -1038,13 +1038,13 @@ export interface components {
       viewable_skill_message_type_list: components['schemas']['MessageType'][]
       count_camp?: components['schemas']['Camp']
       description: string
-      is_viewable_lovers_message: boolean
       abilities: components['schemas']['AbilityTypes']
       is_fox_count: boolean
-      is_viewable_sympathize_say: boolean
       is_viewable_werewolf_say: boolean
       is_available_werewolf_say: boolean
+      is_viewable_lovers_message: boolean
       is_available_sympathize_say: boolean
+      is_viewable_sympathize_say: boolean
     }
     SkillRequest: {
       first: components['schemas']['Skill']
@@ -1270,12 +1270,12 @@ export interface components {
     VillageStatus: {
       code: string
       name: string
-      is_canceled: boolean
       is_prologue: boolean
       is_progress: boolean
       is_epilogue: boolean
       is_solved: boolean
       is_finished: boolean
+      is_canceled: boolean
     }
     VillageTags: {
       list: string[]
@@ -1499,35 +1499,35 @@ export interface components {
       commig_outs: components['schemas']['ComingOuts']
       ip_addresses: string[]
       notification?: components['schemas']['VillageParticipantNotificationCondition']
-      is_available_skill_request: boolean
+      is_alive: boolean
       is_dead: boolean
-      is_available_coming_out: boolean
-      is_viewable_monologue_say: boolean
-      is_sayable_monologue_say: boolean
       is_admin: boolean
+      is_available_coming_out: boolean
       is_viewable_grave_say: boolean
       is_sayable_grave_say: boolean
       is_viewable_lovers_say: boolean
       is_sayable_lovers_say: boolean
+      is_viewable_monologue_say: boolean
+      is_sayable_monologue_say: boolean
+      is_viewable_secret_say: boolean
+      is_sayable_secret_say: boolean
       is_viewable_spectate_say: boolean
       is_sayable_spectate_say: boolean
-      is_viewable_sympathize_say: boolean
       is_sayable_sympathize_say: boolean
       is_viewable_werewolf_say: boolean
       is_sayable_werewolf_say: boolean
+      is_viewable_fox_message: boolean
+      is_viewable_mason_message: boolean
+      is_available_vote: boolean
+      is_available_skill_request: boolean
+      is_viewable_sympathize_say: boolean
       is_viewable_attack_message: boolean
-      is_viewable_secret_say: boolean
-      is_sayable_secret_say: boolean
       is_viewable_autopsy_message: boolean
       is_viewable_fanatic_message: boolean
-      is_viewable_fox_message: boolean
       is_viewable_guru_psychic_message: boolean
-      is_viewable_mason_message: boolean
       is_viewable_private_system_message: boolean
       is_viewable_psychic_message: boolean
       is_viewable_sympathizer_message: boolean
-      is_available_vote: boolean
-      is_alive: boolean
     }
     VillageParticipants: {
       /** Format: int32 */
@@ -1664,9 +1664,6 @@ export interface components {
       participate_finished_villages: components['schemas']['VillagesView']
       create_progress_villages: components['schemas']['VillagesView']
       create_finished_villages: components['schemas']['VillagesView']
-    }
-    CharachipsForm: {
-      charachip_ids?: number[]
     }
     Charas: {
       list: components['schemas']['Chara'][]
@@ -2735,7 +2732,7 @@ export interface operations {
   charas: {
     parameters: {
       query: {
-        form: components['schemas']['CharachipsForm']
+        form: string
       }
       header?: never
       path?: never
@@ -2757,7 +2754,7 @@ export interface operations {
   charachips: {
     parameters: {
       query: {
-        form: components['schemas']['CharachipsForm']
+        form: string
       }
       header?: never
       path?: never
